# swagger.yaml
@@ -6,6 +6,7 @@ info:
 
 tags: 
  name: PrinterGroups
+ name: PrinterGroupAssignment
 
 paths:
   /printer-groups:
@@ -328,3 +329,119 @@ paths:
                 properties:
                   code:
                     type: string
+  /device/assign/{printerId}:
+    post:
+      summary: Assign PrinterGroups!
+      tags: [PrinterGroupAssignment]
+      description: Assign PrinterGroups to Printer. 
+      parameters:
+        - in: path
+          name: printerId
+          schema:
+            type: integer
+          # required: true     
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+                type: object
+                properties:     
+                  printerGroupId:    
+                    type: array
+                    items:
+                      type: integer
+                    example: 
+                      - 1
+                      - 2
+                      - 3          
+      responses:
+        200:
+          description: The PrinterGroups is Assigned!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  printerGroupId:
+                    type: integer
+                  printerId:
+                    type: integer
+                  assignedAt:
+                    type: date
+                  assignedBy:
+                    type: integer 
+        400:
+          description: Bad request! 
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string     
+        500:
+          description: Internal Server Error! 
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+  /device/unAssign/{printerId}:
+    put:
+      summary: UnAssign PrinterGroups!
+      tags: [PrinterGroupAssignment]
+      description: UnAssign PrinterGroups to Printer.  
+      parameters:
+        - in: path
+          name: printerId
+          schema:
+            type: integer
+          # required: true   
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+                type: object
+                properties:     
+                  printerGroupId:    
+                    type: array 
+                    items: 
+                      type: integer 
+                    example: 
+                      - 1
+                      - 2
+                      - 3              
+      responses:
+        200:
+          description: The PrinterGroups is UnAssigned!
+          content:
+            application/json:
+              schema:
+                type: array
+                properties:
+                  id:
+                    type: integer 
+        400:
+          description: Bad request! 
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string     
+        500:
+          description: Internal Server Error! 
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string                                      
